--- a/aboutus.html
+++ b/aboutus.html
@@ -17,7 +17,7 @@
 		<header class="col-12 col-m-12 upperheader">
 			<a href="main.html">PASS</a>
 		</header>
-		<nav class="w3-bar w3-green">
+		<nav class="w3-bar w3-blue-grey">
 			<a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="main.html" style="width: 9%">HOME</a> <a
@@ -41,8 +41,7 @@
 				<h2>ABOUT US</h2>
 			</b>
 			<div class="row">
-				<img class="logo" src="https://goo.gl/m5XoZY"
-					title="https://goo.gl/m5XoZY" alt="LOGO" />
+				<img class="logo" src="img/lcgd.jpg" alt="LOGO" />
 			</div>
 			<div>
 				<p><h4><b>LEECHAGADA</b> 이차가다</h4>
