--- a/assemble.html
+++ b/assemble.html
@@ -7,7 +7,7 @@
 <title>PASS</title>
 <link rel="stylesheet" type="text/css" href="passcss.css" />
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="icon" href="https://goo.gl/m5XoZY">
+<link rel="icon" href="m5XoZY">
 <script type="text/javascript" src="loadXML.js"></script>
 <!-- [if lt IE 9]>
         <script src="html5shiv.js"></script>
@@ -18,7 +18,7 @@
 		<header class="col-12 col-m-12 upperheader">
 			<a href="main.html">PASS</a>
 		</header>
-		<nav class="w3-bar w3-green">
+		<nav class="w3-bar w3-blue-grey">
 			<a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="main.html" style="width: 9%">HOME</a> <a
@@ -57,8 +57,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/WCnGNN" title="https://goo.gl/WCnGNN"
-						alt="조립부품들" />
+					<img src="img/assemble1/1.jpg" alt="조립부품들" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>조립에 사용한 부품들.<br/>
 					<br/>
@@ -72,84 +71,73 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/4Y8ek1" title="https://goo.gl/4Y8ek1"
-						alt="motherboard" />
+					<img src="img/assemble1/2.jpg" alt="motherboard" style="width: 30%;"/>
 					<div class="w3-display-bottom">조립에 사용된 메인보드</div>
 				</div>
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/kZb257" title="https://goo.gl/kZb257"
-						alt="motherboardDetail" />
+					<img src="img/assemble1/3.jpg" alt="motherboardDetail" style="width: 30%;"/>
 					<div class="w3-display-bottom">조립에 사용된 메인보드</div>
 				</div>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/Lh7MyD" title="https://goo.gl/Lh7MyD"
-						alt="CPU" />
+					<img src="img/assemble1/4.jpg" alt="CPU" style="width: 30%;"/>
 					<div class="w3-display-bottom">조립에 사용된 CPU</div>
 				</div>
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/jCwMwe" title="https://goo.gl/jCwMwe"
-						alt="CPUwithCooler" />
+					<img src="img/assemble1/5.jpg" alt="CPUwithCooler" style="width: 30%;"/>
 					<div class="w3-display-bottom">조립에 사용된 CPU</div>
 				</div>
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/eYRmT7" title="https://goo.gl/eYRmT7"
-						alt="CPUDetail" />
+					<img src="img/assemble1/6.jpg" alt="CPUDetail" style="width: 30%;"/>
 					<div class="w3-display-bottom">조립에 사용된 CPU</div>
 				</div>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/FPoiYB" title="https://goo.gl/FPoiYB"
-						alt="SSD" />
+					<img src="img/assemble1/7.jpg" alt="SSD" style="width: 30%;"/>
 					<div class="w3-display-bottom">조립에 사용된 SSD</div>
 				</div>
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/JkvweJ" title="https://goo.gl/JkvweJ"
-						alt="SSDDetail" />
+					<img src="img/assemble1/8.jpg" alt="SSDDetail" style="width: 30%;"/>
 					<div class="w3-display-bottom">조립에 사용된 SSD</div>
 				</div>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/Yvgs6H" title="https://goo.gl/Yvgs6H"
-						alt="RAM" />
+					<img src="img/assemble1/9.jpg" alt="RAM" style="width: 30%;"/>
 					<div class="w3-display-bottom">조립에 사용된 RAM</div>
 				</div>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/2KVJEH" title="https://goo.gl/2KVJEH"
-						alt="ODD" />
+					<img src="img/assemble1/10.jpg" alt="ODD" style="width: 30%;"/>
 					<div class="w3-display-bottom">조립에 사용된 파워서플라이</div>
 				</div>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/oHGEuK" title="https://goo.gl/oHGEuK"
-						alt="case" />
+					<img src="img/assemble1/11.jpg" alt="case" style="width: 20%;"/>
 					<div class="w3-display-bottom">조립에 사용된 케이스</div>
 				</div>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/rCiQsR" title="https://goo.gl/rCiQsR"
-						alt="ODD" />
+					<img src="img/assemble1/12.jpg" alt="ODD" style="width: 30%;"/>
 					<div class="w3-display-bottom">조립에 사용된 ODD</div>
 				</div>
 			</div>
