--- a/assemble2.html
+++ b/assemble2.html
@@ -7,7 +7,7 @@
 <title>PASS</title>
 <link rel="stylesheet" type="text/css" href="passcss.css" />
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="icon" href="https://goo.gl/m5XoZY">
+<link rel="icon" href="m5XoZY">
 <script type="text/javascript" src="loadXML.js"></script>
 <!-- [if lt IE 9]>
         <script src="html5shiv.js"></script>
@@ -18,7 +18,7 @@
 		<header class="col-12 col-m-12 upperheader">
 			<a href="main.html">PASS</a>
 		</header>
-		<nav class="w3-bar w3-green">
+		<nav class="w3-bar w3-blue-grey">
 			<a class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="main.html" style="width: 9%">HOME</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
@@ -56,8 +56,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/yR7BPf" title="https://goo.gl/yR7BPf"
-						alt="motherboard_CPU1" />
+					<img src="img/assemble2/1.jpg" alt="motherboard_CPU1" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>빨간색으로 표시된 부분이 CPU 소켓을 열기 위한 레버 부분이다.</p>
 					</div>
@@ -66,8 +65,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/dU8TVd" title="https://goo.gl/dU8TVd"
-						alt="motherboard_CPU2" />
+					<img src="img/assemble2/2.jpg" alt="motherboard_CPU2" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>빨간색 부분을 검지를 이용해 레버를 살짝 눌러서 옆으로 밀어 CPU 소켓을 연다.</p>
 					</div>
@@ -76,8 +74,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/2Y4N6p" title="https://goo.gl/2Y4N6p"
-						alt="motherboard_CPU3" />
+					<img src="img/assemble2/3.jpg" alt="motherboard_CPU3" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>CPU 소켓에 CPU를 장착한다. <br/>
 						이 때 CPU의 소켓과 CPU의 모서리가 잘 일치하도록 삽입한다. (CPU에 그려져 있는 삼각형 표시 참고)<br/> 
@@ -88,8 +85,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/LNvAMH" title="https://goo.gl/LNvAMH"
-						alt="motherboard_CPU4" />
+					<img src="img/assemble2/4.jpg" alt="motherboard_CPU4" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>메인보드에 빨간색으로 표시된 4개의 구멍은 쿨러의 핀을 장착시키는 부분이다. <br/>
 						CPU 위에 쿨러를 얹고 쿨러의 네 모서리 핀을 딸깍 소리가 날 때까지 꾹 눌러 장착시킨다.</p>
@@ -99,8 +95,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/1ri5Cz" title="https://goo.gl/1ri5Cz"
-						alt="motherboard_CPU5" />
+					<img src="img/assemble2/5.jpg" alt="motherboard_CPU5" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>쿨러가 올바르게 장착된 모습이다.</p>
 					</div>
@@ -108,8 +103,7 @@
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/ahdm9Z" title="https://goo.gl/ahdm9Z"
-						alt="motherboard_CPU6" />
+					<img src="img/assemble2/6.jpg" alt="motherboard_CPU6" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>빨간색으로 표시된 부분은 쿨러를 메인보드에 연결시키는 커넥터이다. <br/>
 						이 부분을 자세히 보면 CPU_FAN이라고 표시되어 있다. 여기에 쿨러로부터 나온 선을 연결시킨다.</p>
@@ -118,8 +112,7 @@
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/xNm5xY" title="https://goo.gl/xNm5xY"
-						alt="motherboard_RAM1" />
+					<img src="img/assemble2/7.jpg" alt="motherboard_RAM1" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>위의 사진에서 보이는 부분을 RAM 모듈을 장착할 수 있는 두 개의 슬롯이다. 주로 RAM 슬롯은 2~4개이다.<br/> 
 						참고로 이 메인보드가 지원할 수 있는 메모리의 최대량은 32GB로 16GB 모듈 2개를 장착하면 최대가 된다. <br/>
@@ -130,8 +123,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/bRUAv1" title="https://goo.gl/bRUAv1"
-						alt="motherboard_RAM2" />
+					<img src="img/assemble2/8.jpg" alt="motherboard_RAM2" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>RAM 모듈을 장착하기 위해서는 위에서 보이는 슬롯의 끝 부분에 있는 레버를 젖혀서 열어야 한다.<br/> 
 						(레버가 슬롯의 양 끝에 있는 경우에는 양 끝의 레버 모두 젖혀야 한다)</p>
@@ -141,8 +133,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/1ze8GD" title="https://goo.gl/1ze8GD"
-						alt="motherboard_RAM23" />
+					<img src="img/assemble2/9.jpg" alt="motherboard_RAM23" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							RAM 모듈을 삽입할 경우에는 위에서 수직으로 꽂아야 한다. <br /> 슬롯에 맞게 끼운 뒤, 양손의 엄지
