--- a/assemble3.html
+++ b/assemble3.html
@@ -7,7 +7,7 @@
 <title>PASS</title>
 <link rel="stylesheet" type="text/css" href="passcss.css" />
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="icon" href="https://goo.gl/m5XoZY">
+<link rel="icon" href="m5XoZY">
 <script type="text/javascript" src="loadXML.js"></script>
 <!-- [if lt IE 9]>
         <script src="html5shiv.js"></script>
@@ -18,7 +18,7 @@
 		<header class="col-12 col-m-12 upperheader">
 			<a href="main.html">PASS</a>
 		</header>
-		<nav class="w3-bar w3-green">
+		<nav class="w3-bar w3-blue-grey">
 			<a class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="main.html" style="width: 9%">HOME</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
@@ -56,8 +56,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/eEtHdw" title="https://goo.gl/eEtHdw"
-						alt="caseoff" />
+					<img src="img/assemble3/1.jpg" alt="caseoff" style="width: 20%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							메인보드에 CPU와 RAM을 장착한 이후에는 따로 정해진 순서가 없다. <br /> 하지만 메인보드를 보호하기 위해 PSU를
@@ -71,8 +70,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/kcnfBg" title="https://goo.gl/kcnfBg"
-						alt="caseoff2" />
+					<img src="img/assemble3/2.jpg" alt="caseoff2" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>나사를 뺀 후의 케이스의 모습이다.</p>
 					</div>
@@ -81,8 +79,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/yLa1mu" title="https://goo.gl/yLa1mu"
-						alt="PSU1" />
+					<img src="img/assemble3/3.jpg" alt="PSU1" style="width: 20%;"/>
 					<div class="w3-display-bottom">
 						<p>빨간색으로 표시된 부분은 PSU를 장착시키는 곳이다.</p>
 					</div>
@@ -91,8 +88,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/nKskZd" title="https://goo.gl/nKskZd"
-						alt="PSU2" />
+					<img src="img/assemble3/4.jpg" alt="PSU2" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							위의 나사들은 PC 조립에 있어서 필요한 나사들이다. <br /> 모양과 크기가 다르기 때문에 종류별로 분류해 놓는
@@ -104,8 +100,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/qjL49E" title="https://goo.gl/qjL49E"
-						alt="PSU3" />
+					<img src="img/assemble3/5.jpg" alt="PSU3" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>다음은 장착할 PSU의 모습이다. PSU에는 많은 케이블이 연결되어 있다.</p>
 					</div>
@@ -114,8 +109,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/bXLYhS" title="https://goo.gl/bXLYhS"
-						alt="PSU4" />
+					<img src="img/assemble3/6.jpg" alt="PSU4" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>3쪽에서 보여준 위치에 PSU를 4개의 나사 구멍과 알맞게 위치시켜 나사로 고정한다.</p>
 					</div>
@@ -123,8 +117,7 @@
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/AiyACV" title="https://goo.gl/AiyACV"
-						alt="PSU5" />
+					<img src="img/assemble3/7.jpg" alt="PSU5" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>위의 사진은 PSU가 올바르게 장착된 케이스의 옆면이다.</p>
 					</div>
@@ -134,8 +127,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/BVnXcc" title="https://goo.gl/BVnXcc"
-						alt="case_motherboard" />
+					<img src="img/assemble3/8.jpg" alt="case_motherboard" style="width: 18%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							메인보드를 장착하기 전에 백 패널을 먼저 장착해야 한다. <br /> 케이스의 뒷면을 보면 백 패널의 크기와 동일한
@@ -149,8 +141,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/zidA7L" title="https://goo.gl/zidA7L"
-						alt="case_motherboard2" />
+					<img src="img/assemble3/9.jpg" alt="case_motherboard2" style="width: 18%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							다음은 메인보드를 장착해야 한다. <br /> 케이스에 있는 나사 구멍의 위치에 맞추어 메인보드를 놓고 나사로 조여준다.<br />
@@ -161,8 +152,7 @@
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img class="expl" src="https://goo.gl/MpLjBb"
-						title="https://goo.gl/MpLjBb" alt="caseCooler" />
+					<img class="expl" src="img/assemble3/10.jpg" alt="caseCooler" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>위의 사진은 케이스에 내장된 쿨러의 커넥터를 메인보드와 연결시킨 것이다.</p>
 					</div>
