--- a/assemble4.html
+++ b/assemble4.html
@@ -7,7 +7,7 @@
 <title>PASS</title>
 <link rel="stylesheet" type="text/css" href="passcss.css" />
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="icon" href="https://goo.gl/m5XoZY">
+<link rel="icon" href="m5XoZY">
 <script type="text/javascript" src="loadXML.js"></script>
 <!-- [if lt IE 9]>
         <script src="html5shiv.js"></script>
@@ -18,7 +18,7 @@
 		<header class="col-12 col-m-12 upperheader">
 			<a href="main.html">PASS</a>
 		</header>
-		<nav class="w3-bar w3-green">
+		<nav class="w3-bar w3-blue-grey">
 			<a class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="main.html" style="width: 9%">HOME</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
@@ -56,8 +56,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/LwUX8z" title="https://goo.gl/LwUX8z"
-						alt="PSU_motherboard" />
+					<img src="img/assemble4/1.jpg" alt="PSU_motherboard" style="width: 18%;" />
 					<div class="w3-display-bottom">
 						<p>PSU의 전원커넥터(24핀)와 보조전원커넥터(4핀 또는 8핀)를 메인보드의 빨간색으로 표시된 부분에
 							연결시켜준다.</p>
@@ -66,8 +65,7 @@
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/8LMmeB" title="https://goo.gl/8LMmeB"
-						alt="PSU_motherboard2" />
+					<img src="img/assemble4/2.jpg" alt="PSU_motherboard2" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>위의 사진은 PSU의 전원커넥터(24핀)이다.</p>
 					</div>
@@ -75,8 +73,7 @@
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/oFdpHz" title="https://goo.gl/oFdpHz"
-						alt="PSU_motherboard3" />
+					<img src="img/assemble4/3.jpg" alt="PSU_motherboard3" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>위의 사진은 PSU의 보조전원커넥터(4핀)이다.</p>
 					</div>
@@ -84,8 +81,7 @@
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/Q6oZ2R" title="https://goo.gl/Q6oZ2R"
-						alt="PSU_motherboard4" />
+					<img src="img/assemble4/4.jpg" alt="PSU_motherboard4" style="width: 18%;"/>
 					<div class="w3-display-bottom">
 						<p>위의 사진은 1쪽에 빨간색으로 표시된 부분에 전원커넥터와 보조전원커넥터를 연결시킨 후의 메인보드 모습이다.</p>
 					</div>
@@ -94,8 +90,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/316VAK" title="https://goo.gl/316VAK"
-						alt="case_ODD" />
+					<img src="img/assemble4/5.jpg" alt="case_ODD" style="width: 18%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							다음은 ODD를 장착시키기 위해 케이스의 전면 베젤을 분리하는 모습이다. <br />베젤을 분리시키는 이유는 ODD를
@@ -107,8 +102,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/ELuYXg" title="https://goo.gl/ELuYXg"
-						alt="case_ODD2" />
+					<img src="img/assemble4/6.jpg" alt="case_ODD2" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>위의 사진처럼 ODD를 삽입해준다.</p>
 					</div>
@@ -116,8 +110,7 @@
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/e9raDW" title="https://goo.gl/e9raDW"
-						alt="case_ODD3" />
+					<img src="img/assemble4/7.jpg" alt="case_ODD3" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							케이스의 옆면에 ODD를 고정시키기 위한 나사 구멍이 있다. <br />이 구멍에 나사를 맞추어 조여준다.
@@ -127,8 +120,7 @@
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/1tkq5J" title="https://goo.gl/1tkq5J"
-						alt="case_ODD4" />
+					<img src="img/assemble4/8.jpg" alt="case_ODD4" style="width: 18%;"/>
 					<div class="w3-display-bottom">
 						<p>위의 사진은 ODD를 장착한 케이스 전면의 모습이다.</p>
 					</div>
@@ -136,8 +128,7 @@
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/PDV4v7" title="https://goo.gl/PDV4v7"
-						alt="case_ODD5" />
+					<img src="img/assemble4/9.jpg" alt="case_ODD5" style="width: 30%;" />
 					<div class="w3-display-bottom">
 						<p>PSU에 내장된 SATA 전원 케이블을 ODD에 연결한다.</p>
 					</div>
@@ -145,8 +136,7 @@
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/Bozp1j" title="https://goo.gl/Bozp1j"
-						alt="case_ODD6" />
+					<img src="img/assemble4/10.jpg" alt="case_ODD6" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>ODD 제품에 내장된 SATA 데이터 케이블을 메인보드에 연결한다.</p>
 					</div>
@@ -155,8 +145,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/jvxBXP" title="https://goo.gl/jvxBXP"
-						alt="case_SSD" />
+					<img src="img/assemble4/11.jpg" alt="case_SSD" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>빨간색으로 표시된 부분은 SSD를 장착시키는 곳이다.</p>
 					</div>
@@ -165,8 +154,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/tVJzGT" title="https://goo.gl/tVJzGT"
-						alt="case_SSD2" />
+					<img src="img/assemble4/12.jpg" alt="case_SSD2" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>케이스에 SSD를 장착하고 내장된 SATA 케이블을 메인보드에 연결한다.</p>
 					</div>
@@ -175,8 +163,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/cNsBtx" title="https://goo.gl/cNsBtx"
-						alt="case_SSD4" />
+					<img src="img/assemble4/13.jpg" alt="case_SSD4" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>위의 사진은 ODD와 SSD에 연결할 PSU의 SATA 전원 케이블이다.</p>
 					</div>
@@ -185,8 +172,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/eJnRnK" title="https://goo.gl/eJnRnK"
-						alt="case_SSD5" />
+					<img src="img/assemble4/14.jpg" alt="case_SSD5" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>PSU에 내장된 SATA 전원 케이블을 SSD에 연결한다.</p>
 					</div>
@@ -195,8 +181,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/AZEYXw" title="https://goo.gl/AZEYXw"
-						alt="case_SSD3" />
+					<img src="img/assemble4/15.jpg" alt="case_SSD3" style="width: 30%;" />
 					<div class="w3-display-bottom">
 						<p>위 사진은 SATA 데이터 케이블을 메인보드의 SATA 포트에 연결한 모습이다.</p>
 					</div>
