--- a/assemble5.html
+++ b/assemble5.html
@@ -7,7 +7,7 @@
 <title>PASS</title>
 <link rel="stylesheet" type="text/css" href="passcss.css" />
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="icon" href="https://goo.gl/m5XoZY">
+<link rel="icon" href="m5XoZY">
 <script type="text/javascript" src="loadXML.js"></script>
 <!-- [if lt IE 9]>
         <script src="html5shiv.js"></script>
@@ -18,7 +18,7 @@
 		<header class="col-12 col-m-12 upperheader">
 			<a href="main.html">PASS</a>
 		</header>
-		<nav class="w3-bar w3-green">
+		<nav class="w3-bar w3-blue-grey">
 			<a class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="main.html" style="width: 9%">HOME</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
@@ -56,8 +56,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/aE4LoF" title="https://goo.gl/aE4LoF"
-						alt="USBcable" />
+					<img src="img/assemble5/1.jpg" alt="USBcable" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							케이스에 내장된 케이블을 메인보드에 연결한다.<br /> 3.0단자와 2.0단자를 둘 다 연결해야 할 경우에 전기적
@@ -70,8 +69,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/L2sWMm" title="https://goo.gl/L2sWMm"
-						alt="USBcable2" />
+					<img src="img/assemble5/2.jpg" alt="USBcable2" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							케이스가 3.0을 지원한다면 3.0 단자와 2.0 단자를 메인보드에 연결하고,<br /> 2.0 밖에 지원하지
@@ -83,8 +81,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/6jZagy" title="https://goo.gl/6jZagy"
-						alt="cables" />
+					<img src="img/assemble5/3.jpg" alt="cables" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>케이블의 종류에는 USB 3.0 단자, USB 2.0 단자, HDD LED 단자, RESET 단자,
 							POWER LED 단자, POWER SW 단자, HD AUDIO 단자, SPEAKER 단자 등이 있다.</p>
@@ -93,8 +90,7 @@
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/i2J4w3" title="https://goo.gl/i2J4w3"
-						alt="cables_motherboard" />
+					<img src="img/assemble5/4.jpg" alt="cables_motherboard" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							케이스에 내장된 케이블을 메인보드에 연결한다. <br />+ / - 표시가 있는 단자는 잘 맞춰서 꽂아주어야 한다.
@@ -109,8 +105,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/rDJmF4" title="https://goo.gl/rDJmF4"
-						alt="cableclear" />
+					<img src="img/assemble5/5.jpg" alt="cableclear" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							부품들 간의 케이블 정리를 해준다. <br /> 특히 메인보드, 쿨러 등과 케이블이 안 부딪히게 선 정리 잘
@@ -122,8 +117,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/FdhEo7" title="https://goo.gl/FdhEo7"
-						alt="cableclear2" />
+					<img src="img/assemble5/6.jpg" alt="cableclear2" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>케이스 옆면의 구멍을 이용하는 것도 깔끔하게 정리할 수 있는 좋은 방법이다.</p>
 					</div>
@@ -132,8 +126,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/665Hvp" title="https://goo.gl/665Hvp"
-						alt="cableclear3" />
+					<img src="img/assemble5/7.jpg" alt="cableclear3" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>케이스의 옆면을 닫아준다.</p>
 					</div>
@@ -142,8 +135,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/PJNg6Z" title="https://goo.gl/PJNg6Z"
-						alt="poweron" />
+					<img src="img/assemble5/8.jpg" alt="poweron" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							전원 버튼을 눌러서 컴퓨터를 부팅해본다.<br /> 모든 부품간의 궁합이 잘 맞고 조립이 잘 되었다면 쿨러가 잘
