--- a/booting.html
+++ b/booting.html
@@ -18,7 +18,7 @@
 		<header class="col-12 col-m-12 upperheader">
 			<a href="main.html">PASS</a>
 		</header>
-		<nav class="w3-bar w3-green">
+		<nav class="w3-bar w3-blue-grey">
 			<a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="main.html" style="width: 9%">HOME</a> <a
@@ -52,14 +52,14 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/2RogPb" title="https://goo.gl/2RogPb" alt="OS" />
+					<img src="img/booting1/1.jpg" alt="OS" style="width: 30%;"/>
 					<div class="w3-display-bottom">컴퓨터에 설치된 운영체제 정보</div>
 				</div>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/71uUKg" title="https://goo.gl/71uUKg" alt="OSexpl1" />
+					<img src="img/booting1/2.jpg" alt="OSexpl1" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 					<p>운영체제 설치에 필요한 것은 설치 미디어, 제품키, 매뉴얼 등이다. <br/>
 설치 미디어로는 CD, USB가 있는데 요즘은 ODD를 장착하지 않는 경우가 많기 때문에 USB 형태가 많다.</p>
@@ -69,7 +69,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/GdSiHX" title="https://goo.gl/GdSiHX" alt="OSexpl2" />
+					<img src="img/booting1/3.jpg" alt="OSexpl2" style="width: 30%;"/>
 					<div class="w3-display-bottom">위 제품은 USB 3.0 지원</div>
 				</div>
 			</div>
