--- a/component.html
+++ b/component.html
@@ -18,7 +18,7 @@
 		<header class="col-12 col-m-12 upperheader">
 			<a href="main.html">PASS</a>
 		</header>
-		<nav class="w3-bar w3-green">
+		<nav class="w3-bar w3-blue-grey">
 			<a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="main.html" style="width: 9%">HOME</a> <a
@@ -58,8 +58,7 @@
 					onclick="w3_open()">☰ CPU</button>
 			</div>
 			<img class="expl"
-				src="http://imgnews.naver.net/image/092/2008/11/09/nehalem_01.jpg?type=w540"
-				title="http://imgnews.naver.net/image/092/2008/11/09/nehalem_01.jpg?type=w540"
+				src="img/info/cpu.jpg"
 				alt="CPU" />
 			<p class="w3-container"><br/>
 <b><q>정의</q></b><br />
