--- a/keyexpl.html
+++ b/keyexpl.html
@@ -18,7 +18,7 @@
 		<header class="col-12 col-m-12 upperheader">
 			<a href="main.html">PASS</a>
 		</header>
-		<nav class="w3-bar w3-green">
+		<nav class="w3-bar w3-blue-grey">
 			<a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="main.html" style="width: 9%">HOME</a> <a
@@ -58,7 +58,7 @@
 					onclick="w3_open()">☰ KEYBOARD</button>
 			</div>
 			<img class="expl"
-				src="http://ncc.phinf.naver.net/20140318_266/1395123715089QnOhu_JPEG/Untitled-2.jpg"
+				src="img/info/keyboard.jpg"
 				title="http://ncc.phinf.naver.net/20140318_266/1395123715089QnOhu_JPEG/Untitled-2.jpg"
 				alt="KEYBOARD" />
 			<pre class="w3-container">
@@ -97,8 +97,7 @@
 * 아래는 기계식 키보드의 축 설명<br/>
 		</p>
 			<img
-				src="https://goo.gl/5dDUwi"
-				title="https://goo.gl/5dDUwi"
+				src="img/info/keyboard_info.jpg"
 				alt="KEYBOARD2" />
 		</section>
 	</div>
