--- a/booting2.html
+++ b/booting2.html
@@ -18,7 +18,7 @@
 		<header class="col-12 col-m-12 upperheader">
 			<a href="main.html">PASS</a>
 		</header>
-		<nav class="w3-bar w3-green">
+		<nav class="w3-bar w3-blue-grey">
 			<a class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="main.html" style="width: 9%">HOME</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
@@ -51,16 +51,14 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/XQvXsz" title="https://goo.gl/XQvXsz"
-						alt="bootingGuide1" />
+					<img src="img/booting2/1.jpg" alt="bootingGuide1" style="width: 30%;"/>
 					<div class="w3-display-bottom">USB를 3.0 포트에 꽂고 전원을 켠다.</div>
 				</div>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/kYiaT7" title="https://goo.gl/kYiaT7"
-						alt="bootingGuide2" />
+					<img src="img/booting2/2.jpg" alt="bootingGuide2" style="width: 30%;"/>
 					<div class="w3-display-bottom">램 16G 정도면 64비트도 충분하니 엔터 키를
 						누른다.</div>
 				</div>
@@ -68,8 +66,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/hZbmw7" title="https://goo.gl/hZbmw7"
-						alt="bootingGuide3" />
+					<img src="img/booting2/3.jpg" alt="bootingGuide3" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							몇 가지 기본적인 설정을 하는 화면이다. <br /> 기본값 그대로 두고 ‘다음’ 버튼을 누르면 Windows의
@@ -82,8 +79,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/Ckom5r" title="https://goo.gl/Ckom5r"
-						alt="bootingGuide4" />
+					<img src="img/booting2/4.jpg" alt="bootingGuide4" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							정품 인증을 위한 필수 과정이다. <br /> 제품 키를 입력하고 ‘다음’ 버튼을 누른다.
@@ -94,8 +90,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/WiQk78" title="https://goo.gl/WiQk78"
-						alt="bootingGuide5" />
+					<img src="img/booting2/5.jpg" alt="bootingGuide5" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							Windows 사용권 계약서에 동의하는 화면이다.<br /> ‘동의함’ 체크를 하고 ‘다음’ 버튼을 누른다.
@@ -106,8 +101,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/hG5oUP" title="https://goo.gl/hG5oUP"
-						alt="bootingGuide6" />
+					<img src="img/booting2/6.jpg" alt="bootingGuide6" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							기존에 있는 운영체제를 업그레이드 할 것인지 완전히 새로 설치할 것인지를 묻는 화면이다.<br /> 처음 설치하는
@@ -119,8 +113,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/Gyg51w" title="https://goo.gl/Gyg51w"
-						alt="bootingGuide7" />
+					<img src="img/booting2/7.jpg" alt="bootingGuide7" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							HDD나 SSD에서 운영체제를 설치할 위치를 지정하는 화면이다. <br /> 현재 이 PC에는 운영체제를 설치할
@@ -132,8 +125,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/VtEg6J" title="https://goo.gl/VtEg6J"
-						alt="bootingGuide8" />
+					<img src="img/booting2/8.jpg" alt="bootingGuide8" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							디폴트 값은 디스크 0의 할당되지 않은 공간의 전체 크기이다. <br /> SSD 전체를 C드라이브로 사용할 것이라면
@@ -145,8 +137,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/hZ96yZ" title="https://goo.gl/hZ96yZ"
-						alt="bootingGuide9" />
+					<img src="img/booting2/9.jpg" alt="bootingGuide9" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							파티션 1: 시스템 예약은 windows 운영체제에서 복구 등을 위해 사용하는 자동으로 만들어진 파티션이다.<br />
@@ -159,8 +150,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/hSrDtN" title="https://goo.gl/hSrDtN"
-						alt="bootingGuide10" />
+					<img src="img/booting2/10.jpg" alt="bootingGuide10" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							운영체제를 디스크에 설치하는 화면이다.<br /> <b>운영체제를 설치할 동안 설치 미디어를 절대로 빼서는
@@ -172,8 +162,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/jkXLy2" title="https://goo.gl/jkXLy2"
-						alt="bootingGuide11" />
+					<img src="img/booting2/11.jpg" alt="bootingGuide11" style="width: 30%;"/>
 					<div class="w3-display-bottom">
 						<p>
 							설치가 완료되면 윈도우 부팅 화면이 뜬다.<br /> 윈도우 업데이트 설정, 사용자 계정 등록과 암호 설정 등을
