--- a/mouseexpl.html
+++ b/mouseexpl.html
@@ -18,7 +18,7 @@
 		<header class="col-12 col-m-12 upperheader">
 			<a href="main.html">PASS</a>
 		</header>
-		<nav class="w3-bar w3-green">
+		<nav class="w3-bar w3-blue-grey">
 			<a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="main.html" style="width: 9%">HOME</a> <a
@@ -58,8 +58,7 @@
 					onclick="w3_open()">☰ MOUSE</button>
 			</div>
 			<img class="expl"
-				src="http://imgnews.naver.com/image/5137/2012/11/14/31784_37743_1628_59_20121114134809.jpg"
-				title="http://imgnews.naver.com/image/5137/2012/11/14/31784_37743_1628_59_20121114134809.jpg"
+				src="img/info/mouse.jpg"
 				alt="MOUSE" />
 			<p class="w3-container">
 <b><q>정의</q></b><br/>
