--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 		</header>
 	</div>
 	<div class="row">
-		<nav class="w3-bar w3-green w3-large">
+		<nav class="w3-bar w3-blue-grey w3-large">
 			<a
 				class="w3-padding-32 colorwhite w3-bar-item w3-hover-light-grey w3-button w3-mobile w3-border-top"
 				href="main.html" style="width: 8%">HOME</a> <a
