--- a/mainexpl.html
+++ b/mainexpl.html
@@ -18,7 +18,7 @@
 		<header class="col-12 col-m-12 upperheader">
 			<a href="main.html">PASS</a>
 		</header>
-		<nav class="w3-bar w3-green">
+		<nav class="w3-bar w3-blue-grey">
 			<a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="main.html" style="width: 9%">HOME</a> <a
@@ -58,12 +58,8 @@
 					onclick="w3_open()">☰ MAIN BOARD</button>
 			</div>
 			<img class="expl"
-				src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Acer_E360_Socket_939_motherboard_by_Foxconn.svg/440px-Acer_E360_Socket_939_motherboard_by_Foxconn.svg.png"
-				title="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Acer_E360_Socket_939_motherboard_by_Foxconn.svg/440px-Acer_E360_Socket_939_motherboard_by_Foxconn.svg.png"
-				alt="MAINBOARD1" /> <img class="expl"
-				src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Intel_D945GCPE_Board.JPG/440px-Intel_D945GCPE_Board.JPG"
-				title="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Intel_D945GCPE_Board.JPG/440px-Intel_D945GCPE_Board.JPG"
-				alt="MAINBOARD2" />
+				src="img/info/motherboard.jpg"
+				alt="MAINBOARD1" /> 
 			<p class="w3-container">
 <b><q>정의</q></b><br/>
 <br/>
