--- a/oddexpl.html
+++ b/oddexpl.html
@@ -18,7 +18,7 @@
 		<header class="col-12 col-m-12 upperheader">
 			<a href="main.html">PASS</a>
 		</header>
-		<nav class="w3-bar w3-green">
+		<nav class="w3-bar w3-blue-grey">
 			<a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="main.html" style="width: 9%">HOME</a> <a
@@ -58,8 +58,7 @@
 					onclick="w3_open()">☰ ODD</button>
 			</div>
 			<img class="expl"
-				src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Sony-Internal-PC-DVD-Drive-Opened.jpg/440px-Sony-Internal-PC-DVD-Drive-Opened.jpg"
-				title="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Sony-Internal-PC-DVD-Drive-Opened.jpg/440px-Sony-Internal-PC-DVD-Drive-Opened.jpg"
+				src="img/info/odd.png"
 				alt="ODD" />
 			<p class="w3-container">
 <b><q>정의</q></b><br/>
